# ei-zephyr-imu-inference

./: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
src/: main.cpp
src/inference/: inferencing.cpp
src/sensors/: ei_microphone.cpp  ei_microphone.h
src/sensors/iks01a3/: ei_accelerometer.cpp  ei_inertial.cpp
src/sensors/iks02a1/: ei_accelerometer.cpp  ei_inertial.cpp
